--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,36 @@
 # ?? ??
-server.port=${PORT:8080}
-server.address=0.0.0.0
+server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
 
-# H2 Database (??)
+# H2 Database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 # JPA ??
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 
-# Security ????
+# Security ?? ????
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
-# CORS ?? (?? ???)
+# Web ??
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
 # ??
-logging.level.com.studyapp=INFO
-logging.level.org.springframework.security=WARN
+logging.level.com.studyapp=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
+
+# ?? ??? ????
+server.error.whitelabel.enabled=false
