--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,51 @@
-# ?? ??
+# Server Configuration
 server.port=8080
 server.error.include-message=always
 server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.whitelabel.enabled=false
 
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:testdb
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.sql.init.mode=always
 
-# H2 Console
+# H2 Console Configuration
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 
-# JPA ??
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-# Security ?? ????
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# Jackson Configuration (JSON)
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.default-property-inclusion=non_null
 
-# Web ??
-spring.web.cors.allowed-origins=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-
-# ??
+# Logging Configuration
+logging.level.root=INFO
 logging.level.com.studyapp=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.boot.autoconfigure=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# ?? ??? ????
-server.error.whitelabel.enabled=false
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# JWT Configuration (for future use)
+jwt.secret=mySecretKey
+jwt.expiration=86400000
