--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,9 +43,24 @@ management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
 # File Upload Configuration
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
+
+# Custom File Upload Directory
+app.upload.dir=uploads
+# ???? ????? ?? ?? ?? ??
+# app.upload.dir=/var/app/uploads
+
+# File Storage Configuration
+spring.web.resources.static-locations=file:uploads/
+spring.web.resources.add-mappings=true
 
 # JWT Configuration (for future use)
 jwt.secret=mySecretKey
 jwt.expiration=86400000
+
+# Chat Configuration
+app.chat.message.max-length=2000
+app.chat.file.max-size=50MB
+app.chat.polling.interval=3000
