--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,17 @@ jwt.expiration=86400000
 app.chat.message.max-length=2000
 app.chat.file.max-size=50MB
 app.chat.polling.interval=3000
+
+# CORS Configuration
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=false
+spring.web.cors.max-age=3600
+
+# Additional Web Configuration
+server.servlet.context-path=/
+server.forward-headers-strategy=framework
+
+# Security Configuration
+spring.security.web.debug=true
